intervalsets-macros/tests/ui/set_missing_braces.rs
use intervalsets_macros::set;

fn main() {
    let _ = set!("[0, 10]");
}
